--- a/styles.css
+++ b/styles.css
@@ -4023,8 +4023,6 @@ input[type="text"].note-toolbar-setting-error,
     & .modal-close-button {
         z-index: 2; /* fix for modal title overlapping close button */
         .is-mobile & {
-            background-color: var(--background-secondary-alt);
-            border-radius: var(--radius-l);
             inset-inline-end: var(--size-4-3);
             top: var(--size-4-3);
         }
@@ -4070,6 +4068,7 @@ input[type="text"].note-toolbar-setting-error,
             overflow-y: auto;
             .is-phone & {
                 padding: var(--size-4-5);
+                margin-bottom: var(--safe-area-inset-bottom);
             }
             /* hide the Web Viewer navigation bar */
             & .workspace-leaf-content[data-type="webviewer"] .view-header {
